clase 8 - ingresando imagenes

--- a/invie/index.html
+++ b/invie/index.html
@@ -8,7 +8,7 @@
 	<header> <!-- header -->
 		<!-- logotipo -->
 		<figure>
-			<img src="" alt="">
+			<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
 		</figure>
 
 		<!-- menu -->
@@ -39,7 +39,7 @@
 
 		<!-- guitarra1 -->
 		<article>
-			<img src="" alt="">
+			<img src="images/invie-acustica.png" alt="Invie acustica" width="200">
 			<h3>Invie Acustica</h3>
 			<ol><!-- lista ordenada -->
 				<li>Estilo vintage</li>
@@ -50,7 +50,7 @@
 
 		<!-- guitarra2 -->
 		<article>
-			<img src="" alt="">
+			<img src="images/invie-classic.png" alt="Invie classic" width="200">
 			<h3>Invie Classic</h3>
 			<ol><!-- lista ordenada -->
 				<li>Estilo vintage</li>
