clase 9 - incluyendo los href y navegancion interna (ejem: guitarras)

--- a/invie/index.html
+++ b/invie/index.html
@@ -5,7 +5,7 @@
 	<title>Invie - tus mejores guitarras!!</title>
 </head>
 <body>
-	<header> <!-- header -->
+	<header id="header"> <!-- header -->
 		<!-- logotipo -->
 		<figure>
 			<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
@@ -15,15 +15,18 @@
 		<nav>
 			<ul><!-- lista desordenada -->
 				<li>
-					<a href="">Home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="">Precios</a>
+					<a href="#guitarras">Guitarras</a>
+				</li>
+				<li>
+					<a href="precios.html">Precios</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
-	<section> <!-- portada -->
+	<section id="portada"> <!-- portada -->
 		<!-- titulo -->
 		<h1>Guitarras Inviesibles</h1>
 
@@ -33,7 +36,7 @@
 		<!-- boton -->
 		<button>Conoce más</button>
 	</section>
-	<section> <!-- guitarras -->
+	<section id="guitarras"> <!-- guitarras -->
 		<!-- titulo -->
 		<h2>Nuestras Guitarras</h2>
 
