--- a/invie/index.html
+++ b/invie/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Invie - tus mejores guitarras!!</title>
+	<link rel="stylesheet" type="text/css" href="css/invie.css">
 </head>
 <body>
 	<header id="header"> <!-- header -->
