clase 11 - selectores css

--- a/invie/index.html
+++ b/invie/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Invie - tus mejores guitarras!!</title>
-	<link rel="stylesheet" type="text/css" href="css/invie.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/invie.css"> -->
 </head>
 <body>
 	<header id="header"> <!-- header -->
@@ -32,7 +33,7 @@
 		<h1>Guitarras Inviesibles</h1>
 
 		<!-- resumen -->
-		<h3>Sé la estrella de rock que siempre quisiste ser.</h3>
+		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser.</h3>
 
 		<!-- boton -->
 		<button>Conoce más</button>
@@ -44,7 +45,7 @@
 		<!-- guitarra1 -->
 		<article>
 			<img src="images/invie-acustica.png" alt="Invie acustica" width="200">
-			<h3>Invie Acustica</h3>
+			<h3 class="title-b">Invie Acustica</h3>
 			<ol><!-- lista ordenada -->
 				<li>Estilo vintage</li>
 				<li>Madera pura</li>
@@ -55,7 +56,7 @@
 		<!-- guitarra2 -->
 		<article>
 			<img src="images/invie-classic.png" alt="Invie classic" width="200">
-			<h3>Invie Classic</h3>
+			<h3 class="title-b">Invie Classic</h3>
 			<ol><!-- lista ordenada -->
 				<li>Estilo vintage</li>
 				<li>Liviana</li>
