clase 12 - agregando los selectores para identificar y ponerle los estilos

--- a/invie/index.html
+++ b/invie/index.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>Invie - tus mejores guitarras!!</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<!-- <link rel="stylesheet" type="text/css" href="css/invie.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/invie.css">
 </head>
 <body>
-	<header id="header"> <!-- header -->
+	<header id="header" class="header"> <!-- header -->
 		<!-- logotipo -->
-		<figure>
+		<figure class="logotipo">
 			<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
 		</figure>
 
 		<!-- menu -->
-		<nav>
+		<nav class="menu">
 			<ul><!-- lista desordenada -->
 				<li>
 					<a href="index.html">Home</a>
@@ -28,9 +28,9 @@
 			</ul>
 		</nav>
 	</header>
-	<section id="portada"> <!-- portada -->
+	<section id="portada" class="portada"> <!-- portada -->
 		<!-- titulo -->
-		<h1>Guitarras Inviesibles</h1>
+		<h1 class="titulo">Guitarras Inviesibles</h1>
 
 		<!-- resumen -->
 		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser.</h3>
@@ -38,12 +38,12 @@
 		<!-- boton -->
 		<button>Conoce más</button>
 	</section>
-	<section id="guitarras"> <!-- guitarras -->
+	<section id="guitarras" class="guitarras"> <!-- guitarras -->
 		<!-- titulo -->
 		<h2>Nuestras Guitarras</h2>
 
 		<!-- guitarra1 -->
-		<article>
+		<article class="guitarra">
 			<img src="images/invie-acustica.png" alt="Invie acustica" width="200">
 			<h3 class="title-b">Invie Acustica</h3>
 			<ol><!-- lista ordenada -->
@@ -54,7 +54,7 @@
 		</article>
 
 		<!-- guitarra2 -->
-		<article>
+		<article class="guitarra">
 			<img src="images/invie-classic.png" alt="Invie classic" width="200">
 			<h3 class="title-b">Invie Classic</h3>
 			<ol><!-- lista ordenada -->
