--- a/invie/index.html
+++ b/invie/index.html
@@ -5,6 +5,8 @@
 	<title>Invie - tus mejores guitarras!!</title>
 	<!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
 	<link rel="stylesheet" type="text/css" href="css/invie.css">
+	<!-- tipo de fuentes -->
+	<link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat" rel="stylesheet">
 </head>
 <body>
 	<header id="header" class="header"> <!-- header -->
