clase 18 - multiples clases css, y concepto de div

--- a/invie/index.html
+++ b/invie/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat" rel="stylesheet">
 </head>
 <body>
-	<header id="header" class="header"> <!-- header -->
+	<header id="header" class="header contenedor"> <!-- header -->
 		<!-- logotipo -->
 		<figure class="logotipo">
 			<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
@@ -31,16 +31,19 @@
 		</nav>
 	</header>
 	<section id="portada" class="portada"> <!-- portada -->
-		<!-- titulo -->
-		<h1 class="titulo">Guitarras Inviesibles</h1>
+		<!-- ¡¡¡un div no añade valor semantico, es una caja simple!!! -->
+		<div class="contenedor">
+			<!-- titulo -->
+			<h1 class="titulo">Guitarras Inviesibles</h1>
 
-		<!-- resumen -->
-		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser.</h3>
+			<!-- resumen -->
+			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser.</h3>
 
-		<!-- boton -->
-		<button>Conoce más</button>
+			<!-- boton -->
+			<button>Conoce más</button>
+		</div>
 	</section>
-	<section id="guitarras" class="guitarras"> <!-- guitarras -->
+	<section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
 		<!-- titulo -->
 		<h2>Nuestras Guitarras</h2>
 
