clase 19 - flotando elementos (imagenes)

--- a/invie/index.html
+++ b/invie/index.html
@@ -49,24 +49,28 @@
 
 		<!-- guitarra1 -->
 		<article class="guitarra">
-			<img src="images/invie-acustica.png" alt="Invie acustica" width="200">
-			<h3 class="title-b">Invie Acustica</h3>
-			<ol><!-- lista ordenada -->
-				<li>Estilo vintage</li>
-				<li>Madera pura</li>
-				<li>Incluye estuche invisible de aluminio</li>
-			</ol>
+			<img src="images/invie-acustica.png" alt="Invie acustica" width="350" class="derecha">
+			<div class="contenedor-guitarra-a">
+				<h3 class="title-b">Invie Acustica</h3>
+				<ol><!-- lista ordenada -->
+					<li>Estilo vintage</li>
+					<li>Madera pura</li>
+					<li>Incluye estuche invisible de aluminio</li>
+				</ol>				
+			</div>
 		</article>
 
 		<!-- guitarra2 -->
 		<article class="guitarra">
-			<img src="images/invie-classic.png" alt="Invie classic" width="200">
-			<h3 class="title-b">Invie Classic</h3>
-			<ol><!-- lista ordenada -->
-				<li>Estilo vintage</li>
-				<li>Liviana</li>
-				<li>Inicia tu camino como rockstar</li>
-			</ol>
+			<img src="images/invie-classic.png" alt="Invie classic" width="350" class="izquierda">			
+			<div class="contenedor-guitarra-b">
+				<h3 class="title-b">Invie Classic</h3>
+				<ol><!-- lista ordenada -->
+					<li>Estilo vintage</li>
+					<li>Liviana</li>
+					<li>Inicia tu camino como rockstar</li>
+				</ol>
+			</div>
 		</article>
 	</section>
 </body>
