clase 22 - creando footer

--- a/invie/index.html
+++ b/invie/index.html
@@ -73,5 +73,23 @@
 			</div>
 		</article>
 	</section>
+	<footer class="footer">
+		<div class="contenedor">
+			<div class="contacto">
+				<!-- img -->
+				<img src="images/invie-white.png" alt="logotipo blanco">
+
+				<!-- tel -->
+				<a href="tel:+51978438896"><strong>Telefono</strong><span>978438896</span></a>
+
+				<!-- email -->
+				<a href="mailto:silviopd01@gmail.com" target="_blank"><strong>Email</strong><span>silviopd01@gmail.com</span></a>
+
+			</div>			
+			<div class="formulario">
+				formulario
+			</div>		
+		</div>
+	</footer>
 </body>
 </html>
