clase 26 - estilizando la tabla en precios.html

--- a/invie/precios.html
+++ b/invie/precios.html
@@ -30,6 +30,36 @@
 			</ul>
 		</nav>
 	</header>
+	<section>
+		<div class="contenedor">
+			<table>
+				<thead>
+					<tr>
+						<th>Modelos</th>
+						<th>Precios</th>
+						<th>Descripción</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Invie Classic</td>
+						<td>1000$</td>
+						<td>Guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie Classic</td>
+						<td>1000$</td>
+						<td>Guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie Classic</td>
+						<td>1000$</td>
+						<td>Guitarra muy pro</td>
+					</tr>
+				</tbody>
+			</table>			
+		</div>
+	</section>
 	<footer class="footer">
 		<div class="contenedor">
 			<div class="contacto">
