clase 28 - puliendo detalles

--- a/invie/precios.html
+++ b/invie/precios.html
@@ -9,28 +9,33 @@
 	<link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat" rel="stylesheet">
 </head>
 <body>
-	<header id="header" class="header contenedor"> <!-- header -->
-		<!-- logotipo -->
-		<figure class="logotipo">
-			<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
-		</figure>
+	<div class="background">
+		<header id="header" class="header contenedor"> <!-- header -->
+			<!-- logotipo -->
+			<figure class="logotipo">
+				<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
+			</figure>
 
-		<!-- menu -->
-		<nav class="menu">
-			<ul><!-- lista desordenada -->
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="index.html#guitarras">Guitarras</a>
-				</li>
-				<li>
-					<a href="precios.html">Precios</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<section>
+			<!-- menu -->
+			<nav class="menu">
+				<ul><!-- lista desordenada -->
+					<li>
+						<a href="index.html"> Home</a>
+					</li>
+					<li>
+						<a href="index.html#guitarras"> Guitarras</a>
+					</li>
+					<li>
+						<a href="precios.html"> Precios</a>
+					</li>
+					<li>
+						<a href="precios2.html"> Precios2</a>
+					</li>
+				</ul>
+			</nav>			
+		</header>
+	</div>
+	<section class="tabla">
 		<div class="contenedor">
 			<table>
 				<thead>
