--- a/invie/precios2.html
+++ b/invie/precios2.html
@@ -8,9 +8,9 @@
 	<!-- tipo de fuentes -->
 	<link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat" rel="stylesheet">
 </head>
-<body>	
-	<section id="portada" class="portada background"> <!-- portada -->
-		<header id="header" class="header contenedor"> <!-- header -->
+<body>
+	<header id="header" class="header background"> <!-- header -->
+		<div class="contenedor">
 			<!-- logotipo -->
 			<figure class="logotipo">
 				<img src="images/invie.png" alt="Invie logotipo" width="186" height="60">
@@ -23,7 +23,7 @@
 						<a href="index.html"> Home</a>
 					</li>
 					<li>
-						<a href="#guitarras"> Guitarras</a>
+						<a href="index.html#guitarras"> Guitarras</a>
 					</li>
 					<li>
 						<a href="precios.html"> Precios</a>
@@ -32,49 +32,38 @@
 						<a href="precios2.html"> Precios2</a>
 					</li>
 				</ul>
-			</nav>
-		</header>
-		<!-- ¡¡¡un div no añade valor semantico, es una caja simple!!! -->
-		<div class="contenedor">
-			<!-- titulo -->
-			<h1 class="titulo">Guitarras <span>Invie</span>sibles</h1>
-
-			<!-- resumen -->
-			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser.</h3>
-
-			<!-- boton -->
-			<a class="button" href="#guitarras">Conoce más</a>
+			</nav>		
 		</div>
-	</section>
-	<section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
-		<!-- titulo -->
-		<h2>Nuestras Guitarras</h2>
-
-		<!-- guitarra1 -->
-		<article class="guitarra">
-			<img src="images/invie-acustica.png" alt="Invie acustica" width="350" class="derecha">
-			<div class="contenedor-guitarra-a">
-				<h3 class="title-b">Invie Acustica</h3>
-				<ol><!-- lista ordenada -->
-					<li>Estilo vintage</li>
-					<li>Madera pura</li>
-					<li>Incluye estuche invisible de aluminio</li>
-				</ol>				
-			</div>
-		</article>
-
-		<!-- guitarra2 -->
-		<article class="guitarra b">
-			<img src="images/invie-classic.png" alt="Invie classic" width="350" class="izquierda">			
-			<div class="contenedor-guitarra-b">
-				<h3 class="title-b">Invie Classic</h3>
-				<ol><!-- lista ordenada -->
-					<li>Estilo vintage</li>
-					<li>Liviana</li>
-					<li>Inicia tu camino como rockstar</li>
-				</ol>
-			</div>
-		</article>
+	</header>
+	<section class="tabla">
+		<div class="contenedor">
+			<table>
+				<thead>
+					<tr>
+						<th>Modelos</th>
+						<th>Precios</th>
+						<th>Descripción</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Invie Classic</td>
+						<td>1000$</td>
+						<td>Guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie Classic</td>
+						<td>1000$</td>
+						<td>Guitarra muy pro</td>
+					</tr>
+					<tr>
+						<td>Invie Classic</td>
+						<td>1000$</td>
+						<td>Guitarra muy pro</td>
+					</tr>
+				</tbody>
+			</table>			
+		</div>
 	</section>
 	<footer class="footer">
 		<div class="contenedor">
